# frama-c-ocaml-ctypes

./: Readme.md  dune-project
src/: config.ml  dune  main.ml  register.ml
tests/: config.json  dune  foo.c  foo.h
tests/simple.t/: dune  dune-project  foo.h  run.t
